...

/**
 * Object containing test tags for navigation components in the application. These tags are used for
 * UI testing to identify various navigation elements.
 */
object NavigationTestTags {
  const val BOTTOM_NAVIGATION_MENU = "BottomNavigationMenu"
  const val TOP_NAVIGATION_MENU = "TopNavigationMenu"
  const val GO_BACK_BUTTON = "GoBackButton"
  const val OVERVIEW_TAB = "OverviewTab"
  const val ADD_TODO_TAB = "AddToDoTab"
  const val EDIT_TODO_TAB = "EditToDoTab"
  const val MAP_TAB = "MapTab"
  const val EVENTS_TAB = "EventsTab"
  const val HOMEPAGE_TAB = "HomePageTab"
  const val NOTIFICATIONS_TAB = "NotificationsTab"
  const val FRIEND_REQUESTS_TAB = "FriendRequestsScreenTab"
  const val PROFILE_TAB = "ProfileTab"
  const val TIMER_TAB = "TimerTab"
  const val FRIENDS_TAB = "FriendsTab"
  const val SETTINGS_TAB = "SettingsButton"
  const val LOGOUT_TAB = "LogoutButton"
  const val DROP_MENU = "DropMenu"
  const val TOP_BAR_TITLE = "TopBarTitle"
  const val ADD_EVENT_TAB = "AddEventTab"
  const val ADD_GROUP_TAB = "AddGroupTab"
  const val EDIT_EVENT_TAB = "EditEventTab"
  const val FIND_FRIENDS_TAB = "FindFriendsTab"
  const val USER_PROFILE_TAB = "UserProfileTab"
  const val BADGE_TAB = "BadgeTab"
...
