...
import com.android.gatherly.ui.settings.SettingsViewModel
import com.google.firebase.Firebase
import com.google.firebase.auth.auth

object InitProfileScreenTestTags {
  const val PROFILE_PICTURE = "initProfile_profile_picture"
  const val USERNAME = "initProfile_username"
  const val NAME_FIELD = "initProfile_name_field"
  const val BIRTHDAY_FIELD = "initProfile_birthday_field"
  const val SCHOOL_FIELD = "initProfile_school_field"
  const val SCHOOL_YEAR_FIELD = "initProfile_school_year_field"
  const val SAVE_BUTTON = "initProfile_save_button"
  const val USERNAME_ERROR = "initProfile_username_error"
  const val NAME_FIELD_ERROR = "initProfile_name_field_error"
  const val BIRTHDAY_FIELD_ERROR = "initProfile_birthday_field_error"
  const val BIO_FIELD = "initProfile_bio_field"
}
/**
...
